--- a/app/src/main/res/drawable-v24/cback.xml
+++ b/app/src/main/res/drawable-v24/cback.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#0dafdc">
+    android:color="@android:color/darker_gray">
 
     <item>
         <shape android:shape="rectangle"
