--- a/app/src/main/res/drawable/ic_cart.xml
+++ b/app/src/main/res/drawable/ic_cart.xml
@@ -1,7 +1,8 @@
-<vector android:height="24dp" android:viewportHeight="435.104"
-    android:viewportWidth="435.104" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#ffffff" android:pathData="M154.112,377.684m-52.736,0a52.736,52.736 0,1 1,105.472 0a52.736,52.736 0,1 1,-105.472 0"/>
-    <path android:fillColor="#ffffff" android:pathData="M323.072,324.436L323.072,324.436c-29.267,-2.88 -55.327,18.51 -58.207,47.777c-2.88,29.267 18.51,55.327 47.777,58.207c3.468,0.341 6.962,0.341 10.43,0c29.267,-2.88 50.657,-28.94 47.777,-58.207C368.361,346.928 348.356,326.924 323.072,324.436z"/>
-    <path android:fillColor="#ffffff" android:pathData="M431.616,123.732c-2.62,-3.923 -7.059,-6.239 -11.776,-6.144h-58.368v-1.024C361.476,54.637 311.278,4.432 249.351,4.428C187.425,4.424 137.22,54.622 137.216,116.549c0,0.005 0,0.01 0,0.015v1.024h-43.52L78.848,50.004C77.199,43.129 71.07,38.268 64,38.228H0v30.72h51.712l47.616,218.624c1.257,7.188 7.552,12.397 14.848,12.288h267.776c7.07,-0.041 13.198,-4.901 14.848,-11.776l37.888,-151.552C435.799,132.019 434.654,127.248 431.616,123.732zM249.344,197.972c-44.96,0 -81.408,-36.448 -81.408,-81.408s36.448,-81.408 81.408,-81.408s81.408,36.448 81.408,81.408C330.473,161.408 294.188,197.692 249.344,197.972z"/>
-    <path android:fillColor="#ffffff" android:pathData="M237.056,118.1l-28.16,-28.672l-22.016,21.504l38.912,39.424c2.836,2.894 6.7,4.55 10.752,4.608c3.999,0.196 7.897,-1.289 10.752,-4.096l64.512,-60.928l-20.992,-22.528L237.056,118.1z"/>
+<vector android:height="24dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FFFFFF" android:pathData="m258.086,84.859 l42.426,42.418 -84.848,84.863 21.211,21.211 84.852,-84.863 42.43,42.426 84.844,-84.844 -106.07,-106.07zM258.086,84.859"/>
+    <path android:fillColor="#FFFFFF" android:pathData="m359,210h90v30h-90zM359,210"/>
+    <path android:fillColor="#FFFFFF" android:pathData="m425.656,452h20.633l36.008,-182h-306.59l-29.988,-120h-116.719v30h93.281l59.43,272h20.633c10.406,-17.848 29.543,-30 51.656,-30s41.25,12.152 51.656,30h16.688c10.406,-17.848 29.543,-30 51.656,-30s41.25,12.152 51.656,30zM269,392h-30v-62h30zM329,392h-30v-62h30zM389,392h-30v-62h30zM389,392"/>
+    <path android:fillColor="#FFFFFF" android:pathData="m284,482c0,16.57 -13.43,30 -30,30s-30,-13.43 -30,-30 13.43,-30 30,-30 30,13.43 30,30zM284,482"/>
+    <path android:fillColor="#FFFFFF" android:pathData="m404,482c0,16.57 -13.43,30 -30,30s-30,-13.43 -30,-30 13.43,-30 30,-30 30,13.43 30,30zM404,482"/>
 </vector>
