--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,39 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity.MainActivity"
     android:background="@color/colorPrimary">
 
 
+   <RelativeLayout
+       android:id="@+id/sideNavContainer"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+       <View
+           android:id="@+id/line1"
+           android:layout_width="match_parent"
+           android:layout_height="0.3dp"
+           android:background="#6A6C6E"/>
+       <FrameLayout
+           android:id="@+id/container_frame"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:layout_above="@+id/line"
+           android:layout_below="@id/line1">
 
-    <FrameLayout
-        android:id="@+id/container_frame"
-        android:layout_width="match_parent"
+       </FrameLayout>
+
+       <View
+           android:id="@+id/line"
+           android:layout_width="match_parent"
+           android:layout_height="0.3dp"
+           android:layout_above="@+id/bottomBar"
+           android:background="#6A6C6E"/>
+
+       <com.roughike.bottombar.BottomBar
+           android:id="@+id/bottomBar"
+           android:layout_width="match_parent"
+           android:layout_height="60dp"
+           android:layout_alignParentBottom="true"
+           android:background="@color/colorPrimary"
+           app:bb_tabXmlResource="@xml/bottombar_tabs"
+           app:bb_activeTabColor="#ffff"
+           app:bb_inActiveTabColor="#9E9E9E"/>
+
+   </RelativeLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_above="@+id/line">
-
-    </FrameLayout>
-
-    <View
-        android:id="@+id/line"
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_above="@+id/bottomBar"
-        android:background="#9E9E9E"/>
-
-    <com.roughike.bottombar.BottomBar
-        android:id="@+id/bottomBar"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
+        android:layout_gravity="start"
         android:background="@color/colorPrimary"
-        app:bb_tabXmlResource="@xml/bottombar_tabs"
-        app:bb_activeTabColor="#ffff"
-        app:bb_inActiveTabColor="#9E9E9E"/>
+        android:fitsSystemWindows="true"
+        app:menu="@menu/drawer_view"
+        app:headerLayout="@layout/nav_header"
+        app:itemTextColor="@color/colorAccent"
+        app:itemIconTint="@color/colorAccent"/>
 
 
-
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
