--- a/app/src/main/res/layout/activity_user_sign_up.xml
+++ b/app/src/main/res/layout/activity_user_sign_up.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -81,7 +80,7 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/smartphone"
+                    android:drawableLeft="@drawable/ic_phone"
                     android:layout_marginEnd="20dp"
                     android:id="@+id/phone"
                     android:layout_marginStart="20dp"
@@ -89,12 +88,13 @@
                     android:drawablePadding="10dp"
                     android:hint="PHONE"
                     android:padding="20dp"
+                    android:maxLength="10"
                     android:textColorHint="#606060"
                     android:inputType="phone"/>
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="2dp"
                     android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                     android:layout_marginEnd="20dp"
                     android:id="@+id/password"
