--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#285FBA</item>
         <item name="colorPrimaryDark">#285FBA</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">#000000</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
