--- a/app/src/main/res/layout/category_model.xml
+++ b/app/src/main/res/layout/category_model.xml
@@ -10,7 +10,7 @@
     >
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="180dp"
         android:id="@+id/category_card"
         android:background="@color/colorPrimary"
         app:cardElevation="6dp"
@@ -18,8 +18,8 @@
         <ImageView
             android:id="@+id/category_image"
             android:layout_gravity="center_horizontal"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:scaleType="centerCrop"
             android:src="@drawable/elec"/>
 
