Home completed | Product List Completed | Search Function Added
TODO:Product detail display activity

--- a/app/src/main/res/layout/custom_appbar.xml
+++ b/app/src/main/res/layout/custom_appbar.xml
@@ -70,7 +70,7 @@
                 android:layout_marginLeft="22dp"
                 android:layout_marginTop="2dp"
                 android:layout_marginBottom="2dp"
-                android:imeOptions="actionGo"
+                android:imeOptions="actionSearch"
                 android:visibility="gone"
                 android:inputType="text"
                 android:drawableLeft="@android:drawable/ic_menu_search">
