--- a/app/src/main/res/layout/model_category.xml
+++ b/app/src/main/res/layout/model_category.xml
@@ -20,12 +20,11 @@
             android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="?android:attr/selectableItemBackground"
             android:scaleType="centerCrop"
             android:src="@drawable/elec"/>
 
     </android.support.v7.widget.CardView>
-
-
 
     <TextView
         android:id="@+id/category_title"
