--- a/app/src/main/res/layout/model_product_listl.xml
+++ b/app/src/main/res/layout/model_product_listl.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="6dp"
+    android:layout_marginLeft="6dp"
+    android:layout_marginRight="6dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp"
     android:padding="4dp"
 
     >
@@ -12,56 +15,91 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/category_card"
-        app:cardElevation="6dp"
-        app:cardBackgroundColor="@color/colorPrimary"
-        app:cardCornerRadius="8dp">
+        app:cardElevation="16dp"
+        app:cardBackgroundColor="#EEEEEE"
+        app:cardCornerRadius="12dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:background="?android:attr/selectableItemBackground"
+            android:hapticFeedbackEnabled="true"
             android:weightSum="1">
 
             <ImageView
                 android:id="@+id/product_list_image"
                 android:layout_gravity="center_horizontal"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/elec" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.9"
-                android:layout_marginLeft="24dp"
+                android:layout_weight="0.5"
+                android:layout_marginLeft="14dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/product_list_title"
-                    android:layout_width="wrap_content"
+                    android:layout_width="230dp"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
+                    android:gravity="left"
                     android:paddingTop="8dp"
-                    android:paddingBottom="6dp"
                     android:layout_below="@+id/category_card"
                     android:text="HP Specter"
                     android:textStyle="bold"
                     android:layout_centerHorizontal="true"
                     android:textColor="@android:color/holo_blue_dark"
-                    android:textSize="16sp" />
+                    android:textSize="14sp" />
+
+
+                <TextView
+                    android:id="@+id/product_list_cat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_below="@+id/category_card"
+                    android:text="in Phones and Accesories"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="10sp" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="4dp">
+
+                    <ImageView
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:src="@drawable/ic_verify"
+                        android:layout_marginRight="2dp"
+                        android:visibility="visible" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="2dp"
+                        android:layout_marginRight="2dp"
+                        android:layout_gravity="center"
+                        android:text="BidKart Assured"
+                        android:textSize="10sp" />
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/product_list_base_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:paddingBottom="6dp"
+                    android:layout_marginTop="2dp"
                     android:layout_below="@+id/category_card"
                     android:text="Base Price : Rs 78000"
                     android:layout_centerHorizontal="true"
-                    android:textColor="#ffffff"
-                    android:textSize="16sp" />
+                    android:textColor="#000000"
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/product_list_seller_name"
@@ -69,11 +107,12 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:paddingBottom="6dp"
+                    android:layout_marginTop="2dp"
                     android:layout_below="@+id/category_card"
                     android:text="Seller Name : PraSoon GosWami"
                     android:layout_centerHorizontal="true"
-                    android:textColor="#ffffff"
-                    android:textSize="16sp" />
+                    android:textColor="#000000"
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/product_list_current_bid"
@@ -86,7 +125,7 @@
                     android:text="Current Bid : Rs 84000"
                     android:layout_centerHorizontal="true"
                     android:textColor="@android:color/holo_green_dark"
-                    android:textSize="18sp" />
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
