--- a/app/src/main/res/layout/model_trending.xml
+++ b/app/src/main/res/layout/model_trending.xml
@@ -22,13 +22,15 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:scaleType="centerCrop"
+            android:background="?android:attr/selectableItemBackground"
+            android:hapticFeedbackEnabled="true"
             android:src="@drawable/elec"/>
     </android.support.v7.widget.CardView>
 
 
     <TextView
         android:id="@+id/trending_product_title"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:paddingTop="8dp"
