--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,8 @@
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            app:bb_tabXmlResource="@xml/bottombar_tabs"
+           app:bb_inActiveTabAlpha="0.7"
+           app:bb_showShadow="true"
            app:bb_activeTabColor="#ffff"
            app:bb_inActiveTabColor="#9E9E9E"/>
 
