--- a/app/src/main/res/layout/model_product_listl.xml
+++ b/app/src/main/res/layout/model_product_listl.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="6dp"
-    android:layout_marginRight="6dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
-    android:padding="4dp"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp"
+    android:layout_marginTop="2dp"
+    android:layout_marginBottom="2dp"
+    android:padding="2dp"
 
     >
 
@@ -17,41 +17,37 @@
         android:id="@+id/category_card"
         app:cardElevation="16dp"
         app:cardBackgroundColor="#EEEEEE"
-        app:cardCornerRadius="12dp">
+        app:cardCornerRadius="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:background="?android:attr/selectableItemBackground"
-            android:hapticFeedbackEnabled="true"
-            android:weightSum="1">
-
+            android:background="?android:attr/selectableItemBackground">
             <ImageView
                 android:id="@+id/product_list_image"
-                android:layout_gravity="center_horizontal"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
+                android:layout_width="148dp"
+                android:layout_height="148dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/elec" />
 
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="0.5"
-                android:layout_marginLeft="14dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="8dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/product_list_title"
-                    android:layout_width="230dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="left"
-                    android:paddingTop="8dp"
-                    android:layout_below="@+id/category_card"
+                    android:paddingTop="4dp"
                     android:text="HP Specter"
                     android:textStyle="bold"
-                    android:layout_centerHorizontal="true"
                     android:textColor="@android:color/holo_blue_dark"
                     android:textSize="14sp" />
 
@@ -90,45 +86,64 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/product_list_base_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:layout_marginTop="2dp"
                     android:layout_below="@+id/category_card"
-                    android:text="Base Price : Rs 78000"
+                    android:text="Expires in:"
                     android:layout_centerHorizontal="true"
                     android:textColor="#000000"
                     android:textSize="12sp" />
 
-                <TextView
-                    android:id="@+id/product_list_seller_name"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:paddingBottom="6dp"
-                    android:layout_marginTop="2dp"
-                    android:layout_below="@+id/category_card"
-                    android:text="Seller Name : PraSoon GosWami"
-                    android:layout_centerHorizontal="true"
-                    android:textColor="#000000"
-                    android:textSize="12sp" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/expDay"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="12 :\nDays"
+                        android:paddingTop="4dp"
+                        android:paddingBottom="4dp"
+                        android:paddingRight="4dp" />
+
+                    <TextView
+                        android:id="@+id/expHrs"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="22 :\nHrs"
+                        android:padding="4dp" />
+
+                    <TextView
+                        android:id="@+id/expMin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="18 :\nMins"
+                        android:padding="4dp" />
+
+                    <TextView
+                        android:id="@+id/expSec"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="37\nSec"
+                        android:padding="4dp" />
+
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/product_list_current_bid"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:paddingBottom="6dp"
                     android:textStyle="bold"
                     android:layout_below="@+id/category_card"
                     android:text="Current Bid : Rs 84000"
-                    android:layout_centerHorizontal="true"
                     android:textColor="@android:color/holo_green_dark"
                     android:textSize="16sp" />
 
             </LinearLayout>
-
 
         </LinearLayout>
 
