--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#2A2D36</color>
         <color name="colorPrimaryDark">#2A2D36</color>
     <color name="colorAccent">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="Transparent">#9F030303</color>
 </resources>
