--- a/app/src/main/res/layout/payment_popup.xml
+++ b/app/src/main/res/layout/payment_popup.xml
@@ -5,28 +5,196 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#9F030303">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
 
     <android.support.v7.widget.CardView
-        android:id="@+id/test"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_centerInParent="true"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/slideup_background"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="16dp">
+        app:cardCornerRadius="32dp">
 
-        <com.airbnb.lottie.LottieAnimationView
-            android:layout_width="180dp"
-            android:layout_height="180dp"
-            android:layout_gravity="center"
-            app:lottie_rawRes="@raw/bag_error"
-            app:lottie_loop="true"
-            app:lottie_autoPlay="true" />
+        <LinearLayout
+            android:id="@+id/before_bid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/bid_pro_image"
+                    android:layout_width="160dp"
+                    android:layout_height="110dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/elec" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginLeft="22dp"
+                    android:layout_marginBottom="6dp">
+
+                    <TextView
+                        android:id="@+id/bid_pro_name"
+                        android:layout_width="210dp"
+                        android:layout_height="wrap_content"
+                        android:text="Apple iPhone 6"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/bid_pro_seller"
+                        android:layout_width="210dp"
+                        android:layout_height="wrap_content"
+                        android:text="from Bidkart"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/bid_pro_currentBid"
+                        android:layout_width="210dp"
+                        android:layout_height="wrap_content"
+                        android:text="Rs 45000"
+                        android:layout_marginTop="6dp"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:layout_width="210dp"
+                        android:layout_height="wrap_content"
+                        android:text="Current Bid"
+                        android:textSize="14sp" />
+
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="16dp"
+                android:layout_gravity="center">
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:layout_width="120dp"
+                    android:layout_height="100dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
+                    app:lottie_rawRes="@raw/wallet_anim"
+                    app:lottie_loop="true"
+                    app:lottie_autoPlay="true" />
+
+                <TextView
+                    android:id="@+id/wallet_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Wallet Amount\nRs 10000"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="8dp"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+
+            </LinearLayout>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="12dp"
+                app:cardCornerRadius="22dp"
+                app:cardElevation="4dp"
+                android:layout_marginBottom="12dp">
+
+                <EditText
+                    android:id="@+id/bid_edit_text"
+                    android:layout_margin="6dp"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:drawablePadding="2dp"
+                    android:drawableLeft="@drawable/ic_rupee" />
+
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/note"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:textSize="12sp" />
+
+            <Button
+                android:id="@+id/final_payment_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:background="@drawable/background_bid_button"
+                android:layout_marginLeft="32dp"
+                android:layout_marginRight="32dp"
+                android:layout_marginBottom="12dp"
+                android:layout_marginTop="8dp"
+                android:text="Done" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/bid_success_frame"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center">
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/bid_success"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_gravity="center"
+                app:lottie_rawRes="@raw/bid_placed_anim"
+                app:lottie_loop="true"
+                app:lottie_autoPlay="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:text="Yaay! You have successfully placed your bid"
+                android:textColor="@color/black"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textSize="16sp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/background_bid_button"
+                android:text="Browse Products"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp" />
+
+        </LinearLayout>
+
 
     </android.support.v7.widget.CardView>
 </RelativeLayout>
