Home completed | Product List Completed | Search Function Added |Product detail display activity Added | Place Bid function
TODO: Seller

--- a/app/src/main/res/layout/model_product_listl.xml
+++ b/app/src/main/res/layout/model_product_listl.xml
@@ -99,7 +99,8 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:id="@+id/time_layout">
 
                     <TextView
                         android:id="@+id/expDay"
