--- a/app/src/main/res/layout/activity_product_page.xml
+++ b/app/src/main/res/layout/activity_product_page.xml
@@ -143,6 +143,7 @@
             </LinearLayout>
 
             <android.support.v7.widget.CardView
+                android:id="@+id/timer_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
