--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -3,16 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorAccent">
 
     <com.airbnb.lottie.LottieAnimationView
 
         android:id="@+id/splash_anim"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         app:lottie_rawRes="@raw/splash_anim"
-        app:lottie_loop="true"
         app:lottie_autoPlay="true" />
 
     <LinearLayout
@@ -20,13 +19,13 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="16dp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true">
 
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
             android:src="@drawable/ic_verify"
             android:layout_gravity="center" />
 
@@ -35,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:text="Welcome to BidKart"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/black"
             android:layout_below="@+id/splash_anim"
             android:textStyle="bold"
             android:textSize="16sp" />
