--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,142 +7,167 @@
     android:background="@color/colorPrimary"
     tools:context="com.invaderx.firebasetrigger.Activity.SellerActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-    android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
-        android:orientation="vertical">
-
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary">
         <android.support.v7.widget.CardView
-            android:id="@+id/card"
+            android:id="@+id/cardViewProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="22dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginTop="240dp"
             android:layout_marginBottom="8dp"
-            app:cardCornerRadius="60dp">
+            app:cardCornerRadius="60dp"
+            app:cardElevation="80dp">
 
             <ImageView
                 android:id="@+id/profileImageView"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/pras" />
 
 
         </android.support.v7.widget.CardView>
 
-        <TextView
-            android:id="@+id/profile_nameView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:text="User name"
-            android:textColor="#fff"
-            android:textSize="21sp"
-            android:textStyle="bold" />
-
-        <android.support.v7.widget.CardView
+        <com.github.florent37.shapeofview.shapes.DiagonalView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="18dp"
-            android:layout_marginTop="45dp"
-            android:layout_marginRight="18dp"
-            app:cardCornerRadius="10dp">
+            android:layout_height="300dp"
+            android:elevation="1dp"
+            app:shape_diagonal_angle="18"
+            app:shape_diagonal_direction="left"
+            app:shape_diagonal_position="bottom">
 
-            <LinearLayout
+            <ImageView
+                android:id="@+id/profileBackgroundImageView"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/pras" />
+
+
+        </com.github.florent37.shapeofview.shapes.DiagonalView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/cardViewProfile"
+            android:background="@color/colorPrimary"
+            android:orientation="vertical">
+
+
+            <TextView
+                android:id="@+id/profile_nameView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="28dp"
+                android:layout_marginTop="10dp"
+                android:text="User name"
+                android:textColor="#fff"
+                android:textSize="28sp"
+                android:textStyle="normal" />
+
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:orientation="vertical">
+                android:layout_marginLeft="18dp"
+                android:layout_marginTop="45dp"
+                android:layout_marginRight="18dp"
+                app:cardCornerRadius="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingLeft="25dp">
+                    android:layout_gravity="center"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:orientation="vertical">
 
-                    <ImageView
-                        android:layout_width="36dp"
-                        android:layout_height="36dp"
-                        android:src="@drawable/ic_email" />
-
-                    <TextView
-                        android:id="@+id/profile_emailView"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:paddingLeft="20dp"
-                        android:text="abc@example.com"
-                        android:textStyle="bold" />
-                </LinearLayout>
+                        android:orientation="horizontal"
+                        android:paddingLeft="25dp">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="25dp"
-                    android:orientation="horizontal"
-                    android:paddingLeft="25dp">
+                        <ImageView
+                            android:layout_width="36dp"
+                            android:layout_height="36dp"
+                            android:src="@drawable/ic_email" />
 
-                    <ImageView
-                        android:layout_width="36dp"
-                        android:layout_height="36dp"
-                        android:src="@drawable/ic_phone" />
+                        <TextView
+                            android:id="@+id/profile_emailView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:paddingLeft="20dp"
+                            android:text="abc@example.com"
+                            android:textStyle="bold" />
+                    </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/profile_phoneView"
-
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:paddingLeft="20dp"
-                        android:text="phone no"
-                        android:textStyle="bold" />
-                </LinearLayout>
+                        android:layout_marginTop="25dp"
+                        android:orientation="horizontal"
+                        android:paddingLeft="25dp">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="25dp"
-                    android:orientation="horizontal"
-                    android:paddingLeft="25dp">
+                        <ImageView
+                            android:layout_width="36dp"
+                            android:layout_height="36dp"
+                            android:src="@drawable/ic_phone" />
 
-                    <ImageView
-                        android:layout_width="36dp"
-                        android:layout_height="36dp"
-                        android:src="@drawable/ic_wallet_black" />
+                        <TextView
+                            android:id="@+id/profile_phoneView"
 
-                    <TextView
-                        android:id="@+id/profile_walletView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:paddingLeft="20dp"
+                            android:text="phone no"
+                            android:textStyle="bold" />
+                    </LinearLayout>
 
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:id="@+id/wallet_layout"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:paddingLeft="20dp"
-                        android:text="0"
-                        android:textStyle="bold" />
+                        android:layout_marginTop="25dp"
+                        android:orientation="horizontal"
+                        android:paddingLeft="25dp">
+
+                        <ImageView
+                            android:layout_width="36dp"
+                            android:layout_height="36dp"
+                            android:src="@drawable/ic_wallet_black" />
+
+                        <TextView
+                            android:id="@+id/profile_walletView"
+
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:paddingLeft="20dp"
+                            android:text="0"
+                            android:textStyle="bold" />
+                    </LinearLayout>
                 </LinearLayout>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+            </android.support.v7.widget.CardView>
 
-    </LinearLayout>
+        </LinearLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/editProfileDetails"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="150dp"
-        android:layout_marginRight="22dp"
-        android:clickable="true"
-        android:src="@drawable/edit64"
-        app:backgroundTint="@color/colorPrimaryDark"
-        app:elevation="6dp"
-        app:fabSize="normal" />
-</RelativeLayout>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/editProfileDetails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="334dp"
+            android:layout_marginRight="35dp"
+            android:clickable="true"
+            android:src="@drawable/edit64"
+            app:backgroundTint="@color/colorPrimaryDark"
+            app:elevation="6dp"
+            app:fabSize="normal" />
+    </RelativeLayout>
+</ScrollView>
